finished website for project1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/jpg" href="images/cake-6-24-285383.png"/>
     <title>Document</title>
 </head>
 <body>
@@ -81,13 +82,13 @@
         <h1 class="recipies-header">Customer Reviews</h1>
         <div class="recipes-flexible-content reviews">
             <div class="review">
-                <img class="review-img" src="images/r1.png" alt="">
-                <small>Robin ,</small>
+                <img class="review-img" src="images/img2.png" alt="">
+                <small>Penny ,</small>
                 <h1 class="review-details"><q> They provide budget food in time </q></h1>
             </div>
             <div class="review">
-                <img class="review-img" src="images/r2.png" alt="">
-                <small>Penny ,</small>
+                <img class="review-img" src="images/guy.png" alt="">
+                <small>Rick ,</small>
                 <h1 class="review-details"><q> Healthy and tasty food. I am a vegan  and enjoy there stuff. </q></h1>
             </div>
            
