--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="images/cake-6-24-285383.png"/>
-    <title>Document</title>
+    <title>Food-Network</title>
 </head>
 <body>
     <header class="navigation">
